--- a/FirstApp/src/app/app.component.html
+++ b/FirstApp/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>Two way data binding - Example</h1>
-Your Name: <input type="text" >
-<hr/>
-Hi {{name}}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I am the AppComponent</h3>
+      <hr>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
+
